--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/text_view_pet"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"/>
