--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_save"
         android:title="@string/action_save"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@mipmap/ic_done"
         app:showAsAction="ifRoom"/>
 
     <item
